# midi-smf-reader

./: CMakeLists.txt  README.md
.github/workflows/: teensy.yml  ubuntu_x64_cmake.yml
cmake/: install_arduino_library.cmake  midi_smf_reader.cmake.in  uninstall.cmake
cmake/toolchains/: teensy41.cmake  teensy41.toolchain.cmake
examples/: CMakeLists.cmake.in  CMakeLists.include.txt  CMakeLists.txt
examples/basic/: CMakeLists.txt  midiread.cpp  midiread.ino
src/: CMakeLists.linux.cmake  CMakeLists.teensy.cmake  CMakeLists.txt  midireader.cpp  midireader.h
test/: CMakeLists.txt  boost-to-junit-xml.xslt  default_test_fixture.h  runtests.cpp  test1.cpp  test_read_midi.cpp  test_read_poly_midi.cpp
