cmake_minimum_required(VERSION 3.10)
project(midi_smf_reader_basic)
if (NOT DEFINED BUILD_FOR_LINUX)
    teensy_include_directories(../../src)
    teensy_add_executable(basic midiread.ino)
    teensy_target_link_libraries(basic midi_smf_reader SD SdFat SPI cores)
    target_link_libraries(basic.elf stdc++)
else ()
    include_directories(../../src)
    add_executable(midi_smf_reader_basic midiread.cpp)
    target_link_libraries(midi_smf_reader_basic midi_smf_reader teensy_x86_sd_stubs teensy_x86_stubs)
endif ()
